--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Purescript Minesweeper</title>
+        <title>Purescript Collection Game</title>
     </head>
     <body>
         <canvas id="gamecanvas">
-        <script type="text/javascript" src="minesweeper.js"></script>
+        <script type="text/javascript" src="game.js"></script>
     </body>
 </html>
